--- a/Modeling/syllabus/Modelling_Data_Part1.Rmd
+++ b/Modeling/syllabus/Modelling_Data_Part1.Rmd
@@ -1,10 +1,13 @@
 ---
-title: "DataPart1"
-author: "Clementine"
-date: "20/09/2018"
+title: "Massive Spatial Data modelling - Part 1"
+author: "Paul Chapron & Clémentine Cottineau"
+date: "23/09/2018"
 output: html_document
 ---
 
+### Case study: urban segregation with scraped AirBnB data (from inside AirBnb or scrape it yourself)
+
+After loading packages...
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
@@ -31,6 +34,8 @@ options(cancensus.api_key = "CensusMapper_5d949dee7f3e2546720b77d6ef08072e")
 
 ```
 
+... define the fixed parameters you will need on this tutorial.
+For example, we choose to work on three Canadian cities with census data, so we set here the id they have in the census, the coordinates of the city halls, the variable names/codes of visible minorities as well as some elements of size etc
 ```{r fixedCodes}
 #Code for CSD in census
 ct <-  "35535"
@@ -68,14 +73,18 @@ lab  <-  as.data.frame (list_census_vectors('CA16') %>%
 
 ```
 
+
+We go on to the loading of pre-downloaded files from the website inside airbnb, and pull them together in a single table.
 ```{r importFiles}
 montrealAirbnb <- read.csv(paste0('insideairbnb/', f[1]))
 torontoAirbnb <- read.csv(paste0('insideairbnb/', f[2]))
 vancouverAirbnb <- read.csv(paste0('insideairbnb/', f[3]))
 
 df <-  rbind(montrealAirbnb, torontoAirbnb, vancouverAirbnb)
+#summary(df)
 ```
 
+In order to use airbnb data for residential segregation studies, we need to remove the listings specific to tourism and not inhabited all year round.
 ```{r selectResidents}
 l <- levels(df$property_type)
 lookup  <-  data.frame('type' = 1:length(l))
@@ -95,11 +104,8 @@ lookup$property_group <- c(
   'home', 'other', 'other', 'hotel'
 )
 
-
-
 dfb = data.frame(df,lookup[match(df$property_type, lookup$type),] )
- # dfh = subset(df, property_group == 'home' & as.character(df$host_neighbourhood) == as.character(df$neighbourhood) & df$room_type != "Shared room")
-dfh = subset(dfb, property_group == 'home' & as.character(dfb$host_neighbourhood) == as.character(df$neighbourhood))
+dfh = subset(dfb, property_group == 'home' & as.character(dfb$host_neighbourhood) == as.character(dfb$neighbourhood))
 dim(dfh)[1] - dim(df)[1]
 
 dfh$property_group <- NULL
@@ -107,42 +113,48 @@ dfhu = dfh[!duplicated(dfh$host_id),]
 dim(dfhu)[1] - dim(dfh)[1]
 ```
 
-
+IN case some moved out, we only keep recent listings:
 ```{r cleaninginactive}
 dfhu$year  <-  as.numeric(substr(dfhu$last_review, 1, 4))
 dfhun = subset(dfhu, year >= 2017)
 dim(dfhun)[1] - dim(dfhu)[1]
 ```
 
-
+And try to estimate the price per room, given that the number of square meter per listing is too sparsely known.
 ```{r estimatePrice}
 dfhun$numPrice <- as.numeric(gsub("[$]",'',dfhun$price))
 
 final  <-  subset(dfhun, room_type != "Shared room")
-
 final$rooms  <-  ifelse(final$bedrooms == 0, 1, final$bedrooms)
-final$priceperroom  <-  as.numeric(ifelse(final$room_type == T,  final$numPrice,  final$numPrice / final$rooms))
+final$priceperroom  <-  as.numeric(ifelse(final$room_type == "Private room",  final$numPrice,  final$numPrice / final$rooms))
 
-dim(final)[1] / dim(df)[1]
+dim(final)
+    
+```
 
+This coumd have been done properly with dplyr, in one command, but it does not really matter (to me!) how you get there as long as you get there with the same result.
+    
+```{r dplyrequivalent, warning=F}
 
-final <- left_join(df, lookup, by = c("property_type" = "type")) %>% 
-  mutate(year = as.numeric(substr(last_review, 1, 4)),
-         numPrice = as.numeric(gsub("[$]",'', price)),
-         rooms = ifelse(bedrooms == 0, 1, bedrooms),
-         priceperroom = as.numeric(ifelse(room_type == T,  numPrice,numPrice / rooms))) %>% 
-  filter(property_group == 'home' & 
-           as.character(host_neighbourhood) == as.character(neighbourhood) & 
-           !duplicated(host_id) & 
-           year >= 2017 & room_type != "Shared room")  
- 
+final <- left_join(df, lookup, by = c("property_type" = "type")) %>%
+  filter(property_group == 'home' &
+           as.character(host_neighbourhood) == as.character(neighbourhood) ) %>% #&
+  filter(!duplicated(host_id)) %>%
+  mutate(year = as.numeric(substr(last_review, 1, 4))) %>%
+  filter(year >= 2017) %>%
+  mutate(numPrice = as.numeric(gsub("[$]",'', price))) %>%
+  filter(room_type != "Shared room") %>%
+  mutate(rooms = ifelse(bedrooms == 0, 1, bedrooms),
+         priceperroom = as.numeric(ifelse(room_type == "Private room", numPrice,numPrice / rooms)))
 
 ```
 
+## Retrieving the census data 
+(This chunk of code comes from @dshkol - Thanks!)
+https://github.com/dshkol/scratchpad/blob/master/content/post/2018-05-10-diversity-and-segregation-i.Rmd
 
-
-
-##Census data of all Canadian Metros
+# Diversity
+We define a measure of minority diversity (entropy) at the aggregate level of geographical units and define a segregation index as the deviation from the city-wide diversity value.
 
 ```{r censusDiversityFunctions, include=FALSE}
 
@@ -300,16 +312,21 @@ diversity_csd <- function(cma) {
 }
 ```
 
-
+Let's apply these fonctions to get the diversity index for all CSD for all Canadian CMAS.
+(This chunk of code comes from @dshkol - Thanks!)
 
 ```{r applyCensusDiversityFunctions, message=F, warning=F, include=F}
-# Apply function to get EI for all CSD for all Canadian CMAS
 cmas <- list_census_regions("CA16") %>% filter(level == "CMA") %>% select(region, name, pop)
 
 cma_ei <- purrr::map_df(cmas$region, .f = diversity_csd) %>% 
   left_join(cmas, by = c("CMA"="region")) %>% 
   select(`Region Name`, `CMA Name`=name, CMA, GeoUID, Population, `CMA Population` = pop, Ei)
 ```
+
+# Segregation
+(This chunk of code comes from @dshkol - Thanks!)
+
+We define a measure of minority segregation index as the deviation from the city-wide diversity value.
 
 ```{r CensusSegregationFunctions, include=FALSE}
 
@@ -406,7 +423,21 @@ clean_names2 <- function (dfr) {
 
 ```
 
+And apply it to Canadial metropolises.
+(This chunk of code comes from @dshkol - Thanks!)
 
+```{r applyCensusSegregationFunctions, include=F}
+############# compute segregation for all metros and plot comparison of index
+
+cma_seg <- purrr::map_df(cmas$region, .f = segregation_csd) %>% 
+  left_join(cmas, by = c("cma"="region")) %>% 
+  select(`Region Name`=name.x, `CMA Name`=name.y, CMA = cma,Population = csdpop, `CMA Population` = pop, Ei = csdei, H) %>% 
+  ungroup()
+```
+
+# Economic segregation
+
+Now let's define a measure of segration which accounts for ordinal variables such as income, wealth or airbnb prices, with Reardon's ordinal measure of segregation (2009).
 
 ```{r airbnbSegregationFunction, include=F}
 
@@ -454,16 +485,8 @@ segIndex10  <-  function(tabOfSpatialUnits, distributionColNames, K = 10){
 }
 ```
 
-
-```{r applyCensusSegregationFunctions, include=F}
-############# compute segregation for all metros and plot comparison of index
-
-cma_seg <- purrr::map_df(cmas$region, .f = segregation_csd) %>% 
-  left_join(cmas, by = c("cma"="region")) %>% 
-  select(`Region Name`=name.x, `CMA Name`=name.y, CMA = cma,Population = csdpop, `CMA Population` = pop, Ei = csdei, H) %>% 
-  ungroup()
-```
-
+## Comparing cities
+(This chunk of code comes from @dshkol - Thanks!)
 
 ```{r applyCensusSegregationFunctionsBis}
 ggplot(bind_rows(cma_seg %>% 
@@ -488,7 +511,7 @@ ggplot(bind_rows(cma_seg %>%
        caption = "Segregation index of visible minorities\n@dshkol | Data: Statistics Canada, Census 2016")
 ```
 
-
+(This chunk of code comes from @dshkol - Thanks!)
 
 ```{r applyCensusDiversityFunctions2}
 ggplot(cma_seg%>% filter(Population > 100000) %>% clean_names2 %>% 
@@ -506,8 +529,9 @@ ggplot(cma_seg%>% filter(Population > 100000) %>% clean_names2 %>%
 ```
 
 
-##Start city specific analysis
+## Start city specific analysis with Airbnb Data
 
+Now let's select a city to work with more specifically, for example "toronto"
 ```{r selectCity, warning=F, message=F}
 city <-  "toronto"
 
@@ -536,6 +560,8 @@ if(city == "montreal"){
 city_data <-  subset(final, city %in% citynames)
 ```
 
+Let's retrieve the census minority data at the census tract and community area level:
+(This chunk of code comes from @dshkol - Thanks!)
 
 ```{r selectCityInCensus, include=F}
 cma.ct <- get_census("CA16", regions=list(CMA=censuscode), 
@@ -550,8 +576,17 @@ csd.geo <- get_census_geometry("CA16", regions=list(CSD=censuscode),
 
 csd.csd.geo <- get_census_geometry("CA16", regions=list(CSD=censuscode), 
                                    level = "CSD", geo_format = "sf")
+
+long.ct <- get_census("CA16", regions=list(CSD=censusCodeMuni), 
+                      vectors = minority_vectors, level = "CT",
+                      labels = "detailed", geo_format = "sf")
+names(long.ct)[14:27] <- c("Total","White","South Asian","Chinese","Black","Filipino",
+                           "Latin American","Arab","SE Asian","West Asian","Korean",
+                           "Japanese","Other","Multiple")
 ```
 
+# Diversity
+And plot resulting diversity map (we could also add airbnb listings when uncommenting the markers)
 ```{r selectCityInCensusBis, warning=F, message=F}
 tractTable <- diversity_index(censuscode)
 
@@ -599,17 +634,10 @@ map
 
 ```
 
+# Minority concentration
+(This chunk of code comes from @dshkol - Thanks!)
 
-
-```{r selectCityInsegregation, include = F}
-long.ct <- get_census("CA16", regions=list(CSD=censusCodeMuni), 
-                      vectors = minority_vectors, level = "CT",
-                      labels = "detailed", geo_format = "sf")
-names(long.ct)[14:27] <- c("Total","White","South Asian","Chinese","Black","Filipino",
-                           "Latin American","Arab","SE Asian","West Asian","Korean",
-                           "Japanese","Other","Multiple")
-```
-
+The next plot shows the spatial concentration of minorities in the central municipality
 
 ```{r selectCityInsegregationBis}
 
@@ -627,6 +655,7 @@ ggplot(long.ct.tidy) + geom_sf(aes(fill = Proportion^(1/2), colour = Proportion^
   labs(caption = "Visible minority groups by square-root proportion of Census Tract population\n@dshkol | Data: Statistics Canada, Census 2016")
 ```
 
+While this map shows the distribution of airbnb listings.
 
 ```{r selectCityInAirbnb}
 pal <- colorQuantile(
@@ -665,13 +694,12 @@ map <- leaflet() %>% addProviderTiles("CartoDB.Positron") %>%
 map
 ```
 
+## Interaction of big and small data
 
+If we want to make the two sets of data communicate, we need to do an intersection between the two, by either aggregating scatter data into areal polygons, either by assigning polygon information to points.
 ```{r aggregateAirbnbInTracts}
 #############aggregate airbnb into city tracts.
 city_tr  <-  csd.geo[csd.geo$CSD_UID == censusCodeMuni,]
-#city_tr$vacancy = (city_tr$Dwellings - city_tr$Households) / city_tr$Dwellings
-#save(toronto_tr, vancouver_tr, file="cityTractsWithPopAndVacancy.RData")
-
 
 rbnb_pts <- city_data 
 coordinates(rbnb_pts) <- ~longitude+latitude
@@ -680,9 +708,6 @@ rbnb_pts@proj4string <-CRS("+proj=longlat +datum=WGS84")
 city_tracts@proj4string <-CRS("+proj=longlat +datum=WGS84")
 plot(city_tracts, border = "grey")
 points(rbnb_pts, col = "red", cex = 0.2, pch = 16)
-
-#class(city_tracts)
-#class(rbnb_pts)
 
 PTS <- as(rbnb_pts, "sf")
 POLY <- as(city_tracts, "sf")
