--- a/Modeling/syllabus/Modelling_Data_Part1.Rmd
+++ b/Modeling/syllabus/Modelling_Data_Part1.Rmd
@@ -697,23 +697,20 @@ map
 ## Interaction of big and small data
 
 If we want to make the two sets of data communicate, we need to do an intersection between the two, by either aggregating scatter data into areal polygons, either by assigning polygon information to points.
-```{r aggregateAirbnbInTracts}
+```{r intersectingAirbnbInTracts}
 #############aggregate airbnb into city tracts.
-city_tr  <-  csd.geo[csd.geo$CSD_UID == censusCodeMuni,]
-
+city_tracts  <-  as_Spatial(csd.geo[csd.geo$CSD_UID == censusCodeMuni,])
 rbnb_pts <- city_data 
 coordinates(rbnb_pts) <- ~longitude+latitude
-city_tracts <- as_Spatial(city_tr)
 rbnb_pts@proj4string <-CRS("+proj=longlat +datum=WGS84")
 city_tracts@proj4string <-CRS("+proj=longlat +datum=WGS84")
-plot(city_tracts, border = "grey")
-points(rbnb_pts, col = "red", cex = 0.2, pch = 16)
-
 PTS <- as(rbnb_pts, "sf")
 POLY <- as(city_tracts, "sf")
 idata <- st_intersection(PTS, POLY)
+```
 
-#head(idata)
+Then we count the number of airbnb listings in tract and their price distribution
+```{r aggregateAirbnbInTracts}
 idata$distribPrice <- cut2(idata$priceperroom, g = 10)
 intervals <- levels(unique(idata$distribPrice))
 
@@ -721,12 +718,10 @@ rbnbPerTract <- as.data.frame(idata %>%
                                 #group_by(CSD_UID) %>%
                                 count(GeoUID, sort = TRUE) %>%
                                 select(GeoUID, n))[,1:2]
-
 rbnbDistributionPerTract <- as.data.frame(idata %>%
                                             #group_by(CSD_UID) %>%
                                             count(GeoUID, distribPrice) %>%
                                             select(GeoUID, distribPrice, n))[,1:3]
-
 
 tractDistrib <- dcast(rbnbDistributionPerTract, GeoUID ~ distribPrice)
 tractDistrib[is.na(tractDistrib)] <- 0
@@ -734,7 +729,6 @@ tractDistrib <- tractDistrib[,c("GeoUID", intervals)]
 colnames(tractDistrib)[2:11] <- paste0("G", 1:10)
 
 lookupDistrib <-  data.frame('name' = paste0("G", 1:10), 'interval' = intervals)
-
 listingCounts <-  as.data.frame(rbnbPerTract[,1:2])
 city_tracts@data <- data.frame(city_tracts@data,
                                   listingCounts[match(city_tracts@data$GeoUID,
@@ -747,8 +741,8 @@ city_tracts@data <- data.frame(city_tracts@data,
                                                    tractTable$GeoUID),])
 ```
 
-
-```{r addMinoritiesAndDistance}
+We also include minority share in the spatial table
+```{r addMinorityCols}
 Mino <-  as.data.frame(cma.ct[,c("GeoUID", minorities)])
 
 city_tracts@data <- data.frame(city_tracts@data,
@@ -759,50 +753,42 @@ city_tracts@data$ListingPerCapita <-  city_tracts@data$n / city_tracts@data$Popu
 city_tracts@data <- city_tracts@data %>% 
   mutate_at(minorities, funs(Share =./ Population) )
 
-#summary(city_tracts@data)
+```
+
+And the distance of each tract centroid to the city hall:
+```{r addDistanceCol}
 centroidsCity <-  gCentroid(city_tracts,byid=TRUE)
-#plot(centroidsCity, add = T, pch = 16, cex = 0.6)
-
 listMinoShares  <-  paste0(minorities, "_Share")
-
 EstimatorAirbnbPresence <-  cbind(city_tracts@data[,c("GeoUID", "ListingPerCapita", "Ei", 
-                                                       listMinoShares)],
-                                coordinates(centroidsCity))
-
-#head(EstimatorAirbnbPresence)
-
+                                                       listMinoShares)],coordinates(centroidsCity))
 DistCityHall <- distm(EstimatorAirbnbPresence[,c('x','y')], 
                       cityhall, fun=distVincentyEllipsoid)
 EstimatorAirbnbPresence <-  cbind(EstimatorAirbnbPresence, DistCityHall)
 hist(EstimatorAirbnbPresence$DistCityHall)
 ```
-#head(EstimatorAirbnbPresence)
 
-
-
+There is a non-linear relationship between the density of listing per tract and the distance to city hall.
 ```{r vizAibnbMinoritiesAndDistance, message=F, warning=F}
-
 ggplot(EstimatorAirbnbPresence, aes(x = DistCityHall, y = ListingPerCapita)) +
   geom_point() + geom_smooth() + scale_x_log10() + scale_y_log10() +
   geom_vline(xintercept = breakDist, col = "orange", cex = 1)
 ```
 
-
+So we use two subsets of data to do further regressions: central tracts located less than 10km away from the city and peripheral tracts located further.
 ```{r cutByDistance}
-
 # mean value of listing per capita of tracts between 0 & 10 km: 
 central <- EstimatorAirbnbPresence %>%
   filter(DistCityHall <= breakDist, !is.na(ListingPerCapita)) %>%
   select(ListingPerCapita, DistCityHall, Ei, listMinoShares)
-
+dim(central)
 # regression listing per capita of tracts above 10 km: 
 peripheral <- EstimatorAirbnbPresence %>%
   filter(DistCityHall > breakDist, !is.na(ListingPerCapita)) %>%
   select(ListingPerCapita, DistCityHall, Ei, listMinoShares)
+dim(peripheral)
 ```
 
-
-
+Let's regress the scaled log of airbnb listings with scaled variables such as the log of distance to city hall and proportions of visible minorities for our three data samples:
 ```{r modelAibnbMinoritiesAndDistanceByTract}
 
 for (sample in c("all", "central", "peripheral")){
@@ -832,8 +818,8 @@ reg_total$variables  <-  rownames(reg_total)
 reg_total$var  <-  ifelse(is.na(reg_total$minority), as.character(reg_total$variables), as.character(reg_total$minority))
 ```
 
+and plot the results regarding coefficients:
 ```{r vizmodelAibnbMinoritiesAndDistanceByTract}
-
 pall <- ggplot(reg_total, aes(x = var)) + 
   geom_bar(aes(y = est_all, fill = ifelse(pval_all < 0.05, "pval < 0.05", "pval >= 0.05")), stat="identity") + 
   # scale_y_continuous(limits = c(-0.55, 0.55)) +
@@ -851,15 +837,11 @@ pper <- ggplot(reg_total, aes(x = var)) +
 grid.arrange(pall, pcent, pper)
 ```
 
-
-
+Now let's see how we could model relationships at the level of airbnb listings directly, in an attempt to model the price per room:
 ```{r modelAibnbMinoritiesAndDistance}
 
 EstimatorAirbnbPrice <- data.frame(idata, EstimatorAirbnbPresence[match(idata$GeoUID, 
                                                                         EstimatorAirbnbPresence$GeoUID),])
-# head(EstimatorAirbnbPrice)
-# hist(EstimatorAirbnbPrice$priceperroom)
-
 
 EstimatorAirbnbPrice_all <- EstimatorAirbnbPrice %>%
   filter(!is.na(priceperroom), priceperroom > 0) 
@@ -901,7 +883,7 @@ reg_total2$var  <-  ifelse(is.na(reg_total2$minority), as.character(reg_total2$v
                         as.character(reg_total2$minority))
 ```
 
-
+And visualise the results compared to previous results:
 ```{r vizmodelAibnbMinoritiesAndDistance}
 
 pall2 <- ggplot(reg_total2, aes(x = var)) + 
@@ -926,7 +908,7 @@ grid.arrange(pall, pall2,
 ```
 
 
-
+Then let's compare the segregation levels on minority entropy and ordinal price for the chosen city.
 ```{r computeSegIndex}
 
 ReardonSegregationAirbnbPrice <- segIndex10(tabOfSpatialUnits = city_tracts@data, distributionColNames = paste0("G", 1:10))
@@ -935,3 +917,10 @@ EntropySegregationMinorities  <-  cma_seg[cma_seg$CSD_UID == censusCodeMuni,"H"]
 ReardonSegregationAirbnbPrice
 EntropySegregationMinorities
 ```
+
+
+# Now up to you to:
+* change the city
+* change the models
+* improve the data cleaning
+* etc.
